--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.96.0",
     "lightningcss": "^1.31.1",
     "lightningcss-darwin-arm64": "^1.31.1",
     "next": "16.1.6",
